# elevenlabs-azure-mcp

./: README.md  pyproject.toml
elevenlabs_azure_mcp/: __init__.py  azure.py  config.py  public_url.py  server.py
tests/: test_config.py  test_public_url.py
